--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-kotlin = "2.1.10"
-openrndr = "0.4.5-alpha8"
-orx = "0.4.5-alpha8"
+kotlin = "2.2.21"
+openrndr = "0.4.5"
+orx = "0.4.5"
 orsl = "0.4.5-alpha5"
 orml = "0.4.1"
 
